Only prevent link wrapping in paragraphs

--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@ body > * {
 	flex-shrink: 0;
 }
 
-a {
+p a {
 	white-space: nowrap;
 }
 
